various updates, including fixing the seed generator wrt a few bugs